name:                 haskell-minesweeper
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:
maintainer:
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable haskell-minesweeper
  main-is:              Main.hs

  other-modules:        Game
                      , Logic
                      , Rendering

  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                      , array
                      , gloss

  hs-source-dirs:       src

  default-language:     Haskell2010
